<resources>
    <string name="app_name">互帮有赏商家版</string>


    <string name="string_recapture">重新获取</string>
    <!--首页底部按钮 -->
    <string name="main_bottom_chat">聊天</string>
    <string name="main_bottom_group">商家群</string>
    <string name="main_bottom_mine">我的</string>


    <!-- 登录-->
    <string name="login_name">帐号</string>
    <string name="login_name_hint">请输入邮箱/手机号</string>
    <string name="login_password">密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_button_login">登录</string>
    <string name="login_forget_password">忘记密码</string>


    <!-- 忘记密码-->
    <string name="forget_password_get">密码找回</string>
    <string name="forget_password_phone">手机号码</string>
    <string name="forget_password_phone_tip">请输入注册时的手机号</string>
    <string name="forget_password_get_checkcode">获取验证码</string>
    <string name="forget_password_checkcode">验证码</string>
    <string name="forget_password_input_checkcode">请输入验证码</string>
    <string name="next">下一步</string>
    <string name="set_password">找到密码</string>
    <string name="new_password">新密码&#160;&#160;&#160;&#160;</string>
    <string name="confirm_password">确认密码</string>
    <string name="input_password_hint">请输入新的密码</string>
    <string name="input_password_confirm_hint">请再次确认密码</string>
    <string name="commit">提交</string>
    <!-- 通讯录-->
    <string name="contact_title">商家群</string>
    <string name="contact_title_right">申请新建</string>
    <string name="contact_apply_tip">申请进度查看</string>
    <string name="apply_new_group">申请新建群组</string>

    <!-- 我的-->
    <string name="mine_title">个人中心</string>
    <string name="mine_info_tip">查看或编辑个人资料</string>
    <string name="mine_store_info">店铺信息</string>
    <string name="mine_store_info_tip">店铺名称：%1$s</string>
    <string name="mine_modify_password">修改密码</string>
    <string name="mine_clear_cache">清理缓存</string>
    <string name="mine_customer_center">客服中心</string>
    <string name="mine_feek_back">意见反馈</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_logout">退出登录</string>

    <string name="profile_info">个人中心</string>
    <string name="profile_photo">头像</string>
    <string name="profile_nick_name">昵称</string>
    <string name="profile_name">姓名</string>
    <string name="profile_sex">性别</string>
    <string name="profile_cellphone">手机</string>

    <string name="no_coupon">暂无可发放的优惠券</string>
    <string name="send_coupon">发优惠券</string>

    <!--弹窗-->
    <string name="string_system_prompt">系统提示</string>
    <string name="string_watch_ad_get_scroe">恭喜您获得5帮赏分</string>
    <string name="num_dialog_show">购买数量</string>
    <string name="canclebtn">取消</string>
    <string name="surebtn">确定</string>

    <string name="send_coupon_count">发放个数</string>
    <string name="send_coupon_count_hint">请输入发放的优惠券个数</string>
    <string name="send_btn">发放</string>
    <string name="group_num">本群共%1$s人</string>
    <string name="format_discount_money">¥ %1$s</string>
    <string name="format_limit_money">满%1$s元可用</string>
    <string name="format_left_count">剩余</string>
    <string name="format_query_coupon_get_num">已领取%1$s个</string>
    <string name="format_query_points_get_num">已领取%1$s个,%2$s分</string>
    <string name="format_greeting">满%2$s元减%1$s</string>

    <string name="send_points_num">领取人数</string>
    <string name="send_points_num_hint">请输入领取营销积分的人数</string>


    <string name="send_points_per_num">每人领取</string>
    <string name="send_points_per_num_hint">请输入每位买家可领取的营销积分</string>
    <string name="send_points_single_num_hint">请输入当前买家可领取的营销积分</string>
    <string name="send_points_single_num">营销积分数</string>


    <string name="send_points_per_num_result">可用营销积分</string>
    <string name="send_points">发营销积分</string>


    <string name="store_check_pass">您的入驻申请已通过审核</string>
    <string name="store_check_wait">您的入驻申请正在审核</string>
    <string name="store_check_unpass">您的入驻申请审核不通过</string>
    <string name="store_check_unpass_des">请登录网页端重新提交申请信息</string>
    <string name="store_name">店铺名称</string>
    <string name="store_type">店铺分类</string>
    <string name="store_type2">经营类目</string>
    <string name="store_main">经营主体</string>
    <string name="store_owner">联系人</string>
    <string name="string_error">获取数据失败</string>
    <string name="string_help_points">帮赏分</string>
    <string name="string_coupon_points">优惠劵</string>
    <string name="string_remove">删除</string>
    <string name="string_remove_member">删除成员</string>

    <string name="string_create_group_failed">
        您的申请不通过，一般是由于以下原因，如有疑问请联系平台客服：\n
        1、申请理由不充分，不足以支撑建立群组。\n
        2、您已有群组，还没有到达再次申请群组条件。\n
        3、您是未入驻商家，请入驻后申请群组。\n
        4、您是未注册用户，请注册用户后入驻平台，再申请群组。\n
        5、因其他原因，未达到申请群组条件。
    </string>

</resources>
