<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_allbg">

    <include
        layout="@layout/layout_title"></include>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/send_points_bg">

        <TextView
            android:id="@+id/tv_send_points_my_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/color_while"
            android:textSize="@dimen/dimen_40"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_while"
        android:layout_marginTop="@dimen/dimen_13">

        <TextView
            android:id="@+id/tv_send_points_num_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_points_num"
            android:textColor="@color/color_3a"
            android:textSize="@dimen/dimen_15"
            android:padding="@dimen/dimen_10"/>

        <EditText
            android:id="@+id/et_send_points_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_send_points_num_tip"
            android:layout_alignBottom="@+id/tv_send_points_num_tip"
            android:layout_toRightOf="@+id/tv_send_points_num_tip"
            android:background="@null"
            android:hint="@string/send_coupon_count_hint"
            android:layout_marginLeft="@dimen/dimen_13"
            android:inputType="number"
            android:textSize="@dimen/dimen_15"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_send_points_groupnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_13"
        android:text=""
        android:textSize="@dimen/dimen_14"
        android:textColor="@color/color_8c"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_while">

        <TextView
            android:id="@+id/tv_send_points_per_num_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_points_per_num"
            android:textColor="@color/color_3a"
            android:textSize="@dimen/dimen_15"
            android:padding="@dimen/dimen_10"/>

        <EditText
            android:id="@+id/et_send_points_pre_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_send_points_per_num_tip"
            android:layout_alignBottom="@+id/tv_send_points_per_num_tip"
            android:layout_toRightOf="@+id/tv_send_points_per_num_tip"
            android:background="@null"
            android:hint="@string/send_points_per_num_hint"
            android:layout_marginLeft="@dimen/dimen_13"
            android:inputType="number"
            android:textSize="@dimen/dimen_15"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_send_points_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_13"
        android:text="@string/send_points_per_num_result"
        android:textSize="@dimen/dimen_14"
        android:textColor="@color/color_8c"/>

    <Button
        android:id="@+id/btn_send_points"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginRight="@dimen/dimen_20"
        android:background="@drawable/shape_login_bg"
        android:text="@string/send_btn"
        android:textColor="@color/color_while"
        android:textSize="@dimen/dimen_15" />

</LinearLayout>