<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_allbg">

    <include
        layout="@layout/layout_title"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/color_while">

        <RelativeLayout
            android:id="@+id/rl_new_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="13dp"
            android:background="#fff">

            <TextView
                android:id="@+id/tv_input_new_password_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/new_password"
                android:textColor="#000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_set_new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_input_new_password_tip"
                android:background="@null"
                android:hint="@string/input_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="20dip"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:id="@+id/forget_password_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_new_password"
            android:layout_marginLeft="13dp"
            android:alpha="0.3"
            android:background="@drawable/shape_main_bottom_line" />

        <RelativeLayout
            android:id="@+id/rl_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/forget_password_line"
            android:layout_marginLeft="13dp"
            android:background="#fff">

            <TextView
                android:id="@+id/tv_onfirm_password_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/confirm_password"
                android:textColor="#000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_set_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_onfirm_password_tip"
                android:background="@null"
                android:hint="@string/input_password_confirm_hint"
                android:inputType="textPassword"
                android:paddingLeft="20dip"
                android:singleLine="true"
                android:textSize="15sp" />
        </RelativeLayout>

    </RelativeLayout>


    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/shape_login_bg"
        android:text="@string/commit"
        android:textColor="@color/color_while"
        android:textSize="@dimen/dimen_15" />

</LinearLayout>